--- a/app/src/main/res/layout/baris.xml
+++ b/app/src/main/res/layout/baris.xml
@@ -49,7 +49,7 @@
     </LinearLayout>
     <View android:id="@+id/lineBariLoc" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
        <LinearLayout android:layout_width="fill_parent" android:paddingTop="20sp" android:layout_height="wrap_content" android:orientation="horizontal">
-       	<Button android:id="@+id/cmdSave" android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@drawable/button_style"
+       	<Button android:id="@+id/cmdSave" android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@drawable/button_style_green" android:textColor="#FFFFFF"
        			android:textSize="20sp" android:text=" Save -> Continue "  android:layout_marginBottom="10sp"/>
        </LinearLayout>
     </LinearLayout>
