--- a/app/src/main/res/layout/member_list.xml
+++ b/app/src/main/res/layout/member_list.xml
@@ -2,45 +2,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"  android:layout_height="wrap_content" android:scrollbars="vertical"
     android:orientation="vertical">
-    <LinearLayout android:layout_width="fill_parent" android:layout_height="45sp" android:orientation="horizontal" android:background="@color/pageHeadingBack">
-        <ImageButton android:id="@+id/cmdBack" android:background="@color/pageHeadingBack" android:src="@drawable/back" android:layout_width="50sp" android:layout_height="match_parent"/>
+    <LinearLayout android:layout_width="fill_parent" android:layout_height="50sp" android:orientation="horizontal" android:background="@color/pageHeadingBack">
+        <ImageButton android:id="@+id/cmdBack" android:visibility="gone" android:background="@color/pageHeadingBack" android:src="@drawable/back" android:layout_width="50sp" android:layout_height="match_parent"/>
+        <Button
+            android:id="@+id/btncanceltran"
+            android:layout_width="80sp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5sp"
+            android:layout_marginLeft="20sp"
+            android:layout_marginRight="10sp"
+            android:layout_marginTop="5sp"
+            android:background="@drawable/button_style"
+            android:text="Cancel"
+            android:textSize="18sp" />
+
 
         <TextView
             android:id="@+id/lblHeading"
             android:layout_width="300sp"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|left"
             android:paddingLeft="10sp"
             android:text="খানা সদস্যদের তালিকা"
             android:textColor="@color/pageHeading"
+            android:layout_marginBottom="5sp"
+            android:layout_marginTop="5sp"
             android:textSize="20sp" />
 
+
+        <Button
+            android:id="@+id/btnNote"
+            android:layout_width="80sp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5sp"
+            android:layout_marginLeft="0sp"
+            android:layout_marginRight="10sp"
+            android:layout_marginTop="5sp"
+            android:background="@drawable/button_style"
+            android:text="Note"
+            android:textSize="18sp" />
         <Button
             android:id="@+id/btnprocess"
             android:layout_width="80sp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="10sp"
-            android:layout_marginLeft="0sp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5sp"
+            android:layout_marginTop="5sp"
+            android:layout_marginLeft="10sp"
             android:layout_marginRight="10sp"
-            android:layout_marginTop="5dip"
-            android:layout_weight="0.52"
-            android:background="@color/pageHeadingBack"
-            android:text="Process"
-            android:textColor="@color/pageHeading"
-            android:textSize="18sp" />
 
-        <Button
-            android:id="@+id/btncanceltran"
-            android:layout_width="30sp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="10sp"
-            android:layout_marginLeft="0sp"
-            android:layout_marginRight="10sp"
-            android:layout_marginTop="5dip"
-            android:layout_weight="1"
-            android:background="@color/pageHeadingBack"
-            android:text="Cancel"
-            android:textColor="@color/pageHeading"
+            android:text="Process" android:textColor="#000000"
+            android:background="@drawable/button_style"
             android:textSize="18sp" />
 
         <TextView android:id="@+id/VlblRnd" android:text="Round No" android:layout_width="wrap_content" android:visibility="gone" android:layout_height="wrap_content" android:textSize="20sp" android:textColor="#FFFFFF" android:layout_marginLeft="50sp"/>
@@ -107,66 +118,72 @@
         android:layout_height="1dip"
         android:background="#CCCCCC" />
 
-    <LinearLayout android:id="@+id/secMenu" android:layout_weight="3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
+    <LinearLayout android:id="@+id/secMenu" android:weightSum="5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
 
         <Button
             android:id="@+id/btnMemberName"
             android:layout_width="20sp"
             android:layout_height="match_parent"
-            android:layout_marginBottom="10sp"
+            android:layout_marginBottom="5sp"
             android:layout_marginLeft="0sp"
-            android:layout_marginRight="10sp"
-            android:layout_marginTop="5dip"
+            android:layout_marginRight="0sp"
+            android:layout_marginTop="5sp"
             android:layout_weight="1"
             android:background="@drawable/button_style"
             android:text="নতুন সদস্য"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/btnSES"
             android:layout_width="20sp"
             android:layout_height="match_parent"
-            android:layout_marginBottom="10sp"
+            android:layout_marginBottom="5sp"
             android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp"
-            android:layout_marginTop="5dip"
+            android:layout_marginRight="0sp"
+            android:layout_marginTop="5sp"
             android:layout_weight="1"
             android:background="@drawable/button_style"
             android:text="খানার তথ্য"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/btnPregHis"
-            android:layout_width="30sp"
+            android:layout_width="20sp"
             android:layout_height="match_parent"
-            android:layout_marginBottom="10sp"
+            android:layout_marginBottom="5sp"
             android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp"
-            android:layout_marginTop="5dip"
+            android:layout_marginRight="0sp"
+            android:layout_marginTop="5sp"
             android:layout_weight="1"
             android:background="@drawable/button_style"
             android:text="গর্ভের ইতিহাস"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/cmdEvList"
-            android:layout_width="120sp"
+            android:layout_width="20sp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="10sp"
             android:layout_marginBottom="5sp"
+            android:layout_marginTop="5sp"
             android:paddingLeft="10dp"
             android:text="ঘটনার তালিকা"
-            android:textSize="20sp" />
+            android:background="@drawable/button_style"
+            android:layout_weight="1"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/cmdVisitList"
-            android:layout_width="120sp"
+            android:layout_width="20sp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="10sp"
             android:layout_marginBottom="5sp"
-            android:paddingLeft="10dp"
+            android:layout_marginTop="5sp"
+            android:layout_weight="1"
             android:text="পরিদর্শন তালিকা"
-            android:textSize="20sp" />
+            android:background="@drawable/button_style"
+            android:textSize="16sp" />
 
-        <Button android:id="@+id/btnRefresh" android:visibility="gone" android:layout_weight="1"  android:background="@drawable/button_style_blue" android:textSize="18sp" android:textColor="#FFFFFF" android:layout_width="wrap_content" android:layout_height="40sp" android:layout_marginTop="5dip" android:layout_marginBottom="10sp" android:text=" Refresh " android:paddingLeft="5sp" android:paddingRight="5sp"/>
     </LinearLayout>
 
     <View android:id="@+id/lineMenu" android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
@@ -189,8 +206,7 @@
             <include
                 layout="@layout/memberheading"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_height="wrap_content" />
 
             <View
                 android:layout_width="fill_parent"
@@ -232,7 +248,7 @@
             </ScrollView>
         </LinearLayout>
     </HorizontalScrollView>
-    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0" android:background="#F3F3F3">
+    <LinearLayout android:layout_width="fill_parent" android:visibility="gone" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0" android:background="#F3F3F3">
         <RadioGroup
             android:id="@+id/roMemberOption" android:layout_column="0" android:layout_span="4"
             android:layout_width="wrap_content"
