--- a/app/src/main/res/layout/member_list.xml
+++ b/app/src/main/res/layout/member_list.xml
@@ -21,7 +21,7 @@
             android:id="@+id/lblHeading"
             android:layout_width="300sp"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical|left"
+            android:gravity="center_vertical|center"
             android:paddingLeft="10sp"
             android:text="খানা সদস্যদের তালিকা"
             android:textColor="@color/pageHeading"
