--- a/app/src/main/res/layout/visitlist.xml
+++ b/app/src/main/res/layout/visitlist.xml
@@ -8,7 +8,7 @@
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:orientation="horizontal">
-	        <TextView android:id="@+id/lblMigTitle" android:text="Visit List" android:layout_width="200sp" android:layout_height="wrap_content" android:textSize="20sp" />	        
+	        <TextView android:id="@+id/lblMigTitle" android:text="পরিদর্শন তালিকা" android:layout_width="200sp" android:layout_height="wrap_content" android:textSize="20sp" />
 	    </LinearLayout>
     	<LinearLayout	        
 	        android:layout_width="fill_parent"
