--- a/app/src/main/res/layout/visitlistheading.xml
+++ b/app/src/main/res/layout/visitlistheading.xml
@@ -6,15 +6,15 @@
     android:paddingBottom="5dp"
     android:background="#f3f3f3"
     android:orientation="horizontal">							    
-				    <TextView android:text="Round No" 
+				    <TextView android:text="রাউনড নং"
 				         android:layout_width="110sp"
 				         android:gravity="center"
 				         android:layout_height="wrap_content"/>
-				    <TextView  android:text="Respondent"
+				    <TextView  android:text="ঊত্তারদাতা"
 				         android:layout_width="150sp"
 				         android:gravity="center"
 				         android:layout_height="wrap_content"/>				    
-				    <TextView    android:text="Visit Date"
+				    <TextView    android:text="পরিদর্শন তারিখ"
 				         android:layout_width="250sp"
 				         android:gravity="center"
 				         android:layout_height="wrap_content"/>			    
