--- a/app/src/main/res/layout/member_list.xml
+++ b/app/src/main/res/layout/member_list.xml
@@ -50,7 +50,7 @@
             android:layout_marginLeft="10sp"
             android:layout_marginRight="10sp"
 
-            android:text="Process" android:textColor="#000000"
+            android:text="Process" android:textColor="#006699"
             android:background="@drawable/button_style"
             android:textSize="18sp" />
 
@@ -60,7 +60,7 @@
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="5sp" android:background="#CCCCCC" />
     <LinearLayout android:id="@+id/secVill" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
 
-        <TextView android:id="@+id/VlblVill" android:text="খানা নম্বর" android:layout_width="100sp" android:layout_height="wrap_content" android:textSize="20sp" />
+        <TextView android:id="@+id/VlblVill" android:text="খানা নম্বর" android:layout_width="100sp" android:layout_height="wrap_content" android:textSize="16sp" />
 
         <EditText
             android:id="@+id/txtVill"
@@ -74,29 +74,37 @@
         <EditText android:id="@+id/txtBari" android:maxLength="4" android:layout_width="60sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" android:visibility="gone" />
         <EditText android:id="@+id/txtHH" android:maxLength="2" android:layout_width="50sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="20sp" android:textSize="20sp" android:visibility="gone"/>
 
-        <TextView android:text="Village"
+        <TextView
+            android:layout_width="40sp"
+            android:layout_height="wrap_content"
             android:layout_column="0"
-            android:layout_width="80sp"
-            android:textSize="20sp"
-            android:layout_height="wrap_content"/>
+            android:text=""
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="100sp"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:text="গ্রামের নাম"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/lblVillName"
-            android:layout_width="160sp"
+            android:layout_width="200sp"
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:gravity="left"
-            android:textSize="20sp" />
+            android:textSize="17sp" />
 
     </LinearLayout>
     <View android:id="@+id/lineVill" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
 
-    <LinearLayout android:background="#F3F3F3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
+    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle1">
 
-        <TextView android:text="Bari"
+        <TextView android:text="বাড়ির নাম"
             android:layout_column="0"
             android:layout_width="100sp"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:layout_height="wrap_content"/>
 
         <TextView
@@ -105,11 +113,17 @@
             android:layout_height="match_parent"
             android:layout_column="1"
             android:gravity="left"
-            android:textSize="20sp" />
+            android:textSize="17sp" />
 
-        <TextView android:id="@+id/VlblHHHead" android:text="খানা প্রধান" android:layout_column="0" android:layout_width="100sp" android:textSize="20sp" android:layout_height="wrap_content"/>
-        <TextView android:id="@+id/lblHHHead" android:textSize="20sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_column="1" android:gravity="left"/>
+        <TextView android:id="@+id/VlblHHHead" android:text="খানা প্রধান" android:layout_column="0" android:layout_width="100sp" android:textSize="16sp" android:layout_height="wrap_content"/>
 
+        <TextView
+            android:id="@+id/lblHHHead"
+            android:layout_width="200sp"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:gravity="left"
+            android:textSize="17sp" />
 
     </LinearLayout>
 
