--- a/app/src/main/res/layout/eventlistpopup.xml
+++ b/app/src/main/res/layout/eventlistpopup.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
     
@@ -49,16 +49,20 @@
 		    						    
 					</HorizontalScrollView>	        
 	    </LinearLayout>
-    	
-		<LinearLayout	        
-	        android:layout_width="fill_parent" android:paddingLeft="20sp" android:paddingTop="10dp" android:paddingBottom="10sp"
-	        android:layout_height="wrap_content"
-	        android:orientation="horizontal">
-				    <Button
-				        android:id="@+id/cmdEvListClose"
-				        android:layout_width="150sp"
-				        android:layout_height="wrap_content"
-				        android:layout_gravity="right"				        
-				        android:text="Close" />					
-		</LinearLayout>
+	<LinearLayout
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:background="#F3F3F3"
+		android:orientation="horizontal"
+		android:paddingBottom="10sp"
+		android:paddingTop="10dp">
+		<Button
+			android:id="@+id/cmdEvListClose"
+			android:layout_width="150sp" android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:textColor="#FFFFFF"
+			android:layout_height="wrap_content"
+			android:layout_gravity="right" android:layout_weight="1"
+			android:layout_marginTop="10dp" android:background="@drawable/button_style_green"
+			android:text="Close" />
+	</LinearLayout>
+
  </LinearLayout>
