--- a/app/src/main/res/layout/member_list.xml
+++ b/app/src/main/res/layout/member_list.xml
@@ -74,14 +74,15 @@
         <EditText android:id="@+id/txtHH" android:maxLength="2" android:layout_width="50sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="20sp" android:textSize="20sp" android:visibility="gone"/>
 
         <TextView
-            android:layout_width="40sp"
-            android:layout_height="wrap_content"
+            android:layout_width="147sp"
+            android:layout_height="30dp"
             android:layout_column="0"
             android:text=""
             android:textSize="16sp" />
 
         <TextView
             android:layout_width="100sp"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:text="গ্রামের নাম"
@@ -89,11 +90,25 @@
 
         <TextView
             android:id="@+id/lblVillName"
+            android:visibility="gone"
             android:layout_width="200sp"
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:gravity="left"
             android:textSize="17sp" />
+
+        <Button
+            android:id="@+id/btnErrorCheck"
+            android:layout_width="20sp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5sp"
+            android:layout_marginLeft="0sp"
+            android:layout_marginRight="0sp"
+            android:layout_marginTop="5sp"
+            android:layout_weight="0.59"
+            android:background="@drawable/button_style"
+            android:text="অসামঞ্জস্য তথ্য"
+            android:textSize="16sp" />
 
     </LinearLayout>
     <View android:id="@+id/lineVill" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
