--- a/app/src/main/res/layout/visitlist.xml
+++ b/app/src/main/res/layout/visitlist.xml
@@ -14,21 +14,21 @@
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:orientation="horizontal">
-					<HorizontalScrollView  
-		         		android:id="@android:id/tabcontent"
-		         		android:layout_height="fill_parent"
-		         		android:layout_width="fill_parent">
-					    	
-					<ListView
-				        android:id="@+id/lstVisit"
-				        android:layout_width="match_parent"
-				        android:layout_height="400sp"
-				        android:divider="#000000"
-				        android:dividerHeight="1px"
-				        android:clickable="true">
-		    		</ListView>	
-		    						    
-					</HorizontalScrollView>	        
+
+			<HorizontalScrollView
+				android:id="@android:id/tabcontent"
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent">
+
+				<ListView
+					android:id="@+id/lstVisit"
+					android:layout_width="match_parent"
+					android:layout_height="400sp"
+					android:clickable="true"
+					android:divider="#000000"
+					android:dividerHeight="1px"></ListView>
+
+			</HorizontalScrollView>
 	    </LinearLayout>
 
 	<LinearLayout
