--- a/app/src/main/res/layout/visitlistheading.xml
+++ b/app/src/main/res/layout/visitlistheading.xml
@@ -6,11 +6,11 @@
     android:paddingBottom="5dp"
     android:background="#f3f3f3"
     android:orientation="horizontal">							    
-				    <TextView android:text="রাউনড নং"
+				    <TextView android:text="রাউন্ড নং"
 				         android:layout_width="110sp"
 				         android:gravity="center"
 				         android:layout_height="wrap_content"/>
-				    <TextView  android:text="ঊত্তারদাতা"
+				    <TextView  android:text="উত্তরদাতা"
 				         android:layout_width="150sp"
 				         android:gravity="center"
 				         android:layout_height="wrap_content"/>				    
