--- a/app/src/main/res/layout/errorlistheading.xml
+++ b/app/src/main/res/layout/errorlistheading.xml
@@ -7,49 +7,59 @@
     android:background="#f3f3f3"
     android:orientation="horizontal">
 
-					<TextView android:text=""
-						android:layout_width="80sp"
-						android:gravity="center"
-						android:layout_height="wrap_content"
-						android:textSize="15sp"/>
+                    <TextView
+                        android:layout_width="98sp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text=""
+                        android:textSize="18sp" />
 
 					<TextView
 						android:layout_width="80sp"
 						android:layout_height="wrap_content"
 						android:gravity="center"
 						android:text="গ্রাম"
-						android:textSize="15sp"/>
+						android:textSize="18sp"
+						android:visibility="gone"/>
 
 				    <TextView  android:text="বাড়ি"
 				         android:layout_width="80sp"
 				         android:gravity="center"
 				         android:layout_height="wrap_content"
-						android:textSize="15sp"/>
+						android:textSize="18sp"
+						android:visibility="gone"/>
 
 					<TextView
 						android:layout_width="80sp"
 						android:layout_height="wrap_content"
 						android:gravity="center"
 						android:text="খানা"
-						android:textSize="15sp" />
-
+						android:textSize="18sp"
+						android:visibility="gone"/>
+					<TextView
+						android:layout_width="210sp"
+						android:layout_height="wrap_content"
+						android:gravity="left"
+						android:text="সদস্যের নাম"
+						android:textSize="18sp" />
 					<TextView
 						android:layout_width="110sp"
 						android:layout_height="wrap_content"
 						android:gravity="center"
 						android:text="সদস্য নং"
-						android:textSize="15sp" />
+						android:textSize="18sp" />
 
 					<TextView android:text="ফলাফল"
 						android:layout_width="110sp"
 						android:gravity="center"
 						android:layout_height="wrap_content"
-						android:textSize="15sp"/>
+						android:textSize="18sp"
+						android:visibility="gone"/>
 
 					<TextView android:text="নোট"
 						android:layout_width="500sp"
 						android:gravity="left"
 						android:layout_height="wrap_content"
-						android:textSize="15sp"/>
+						android:textSize="18sp"/>
 </LinearLayout>
  
