--- a/app/src/main/res/layout/errorlistrow.xml
+++ b/app/src/main/res/layout/errorlistrow.xml
@@ -19,30 +19,41 @@
 				         android:layout_width="80sp"
 				         android:gravity="center"
 				         android:layout_column="0"
-				         android:layout_height="wrap_content"/>
+				         android:layout_height="wrap_content"
+						android:visibility="gone"/>
 
 				    <TextView android:id="@+id/v_bari"
 				         android:layout_width="80sp"
 				         android:gravity="center"
 				         android:layout_column="1"
-				         android:layout_height="wrap_content"/>
+				         android:layout_height="wrap_content"
+						android:visibility="gone"/>
 
 				    <TextView android:id="@+id/v_hh"
 				         android:layout_width="80sp"
 				         android:gravity="center"
 				         android:layout_column="2"
-				         android:layout_height="wrap_content"/>
+				         android:layout_height="wrap_content"
+						android:visibility="gone"/>
+
+					<TextView android:id="@+id/v_Name"
+						android:layout_width="210sp"
+						android:gravity="left"
+						android:layout_column="3"
+						android:layout_height="wrap_content"/>
 
 					<TextView android:id="@+id/v_Mslno"
 						android:layout_width="100sp"
 						android:gravity="center"
 						android:layout_column="3"
 						android:layout_height="wrap_content"/>
+
 					<TextView android:id="@+id/v_Status"
 						android:layout_width="100sp"
 						android:gravity="center"
 						android:layout_column="4"
-						android:layout_height="wrap_content"/>
+						android:layout_height="wrap_content"
+						android:visibility="gone"/>
 
 					<TextView android:id="@+id/v_note"
 						android:layout_width="500sp"
