--- a/app/src/main/res/layout/household_row.xml
+++ b/app/src/main/res/layout/household_row.xml
@@ -1,28 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout  android:id="@+id/secListRow" xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scrollbars="vertical">
-    <LinearLayout android:id="@+id/secListRow1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
-        <!--<ImageButton android:layout_width="50sp" android:layout_marginLeft="0sp" android:layout_height="45sp" android:background="#ffffff" android:src="@drawable/discard" android:id="@+id/delHousehold"/>-->
-        <TextView android:id="@+id/AAA" android:layout_width="50sp" android:gravity="left" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/Bari" android:layout_width="80sp" android:gravity="left" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/BariN" android:layout_width="200sp" android:gravity="left" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/HH" android:layout_width="80dp" android:gravity="left" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" android:paddingLeft="50sp"/>
-        <TextView android:id="@+id/HHHead" android:layout_width="200sp" android:gravity="left"  android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" android:paddingLeft="30sp"/>
-
-        <TextView
-            android:id="@+id/Visit"
-            android:layout_width="70sp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="8sp"
-            android:layout_marginTop="8sp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:paddingLeft="30sp"
-            android:text="Status" android:visibility="gone" />
-        <TextView android:id="@+id/VisitNote" android:layout_width="150dp" android:gravity="left" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" android:paddingLeft="30sp" android:visibility="gone"/>
-        <TextView android:id="@+id/TotMem" android:layout_width="120sp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" android:visibility="gone" />
+    <LinearLayout android:id="@+id/secListRow1" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginTop="15sp" android:layout_marginBottom="15sp"
+        android:weightSum="8">
+        <TextView android:id="@+id/Bari" android:layout_width="80sp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"  />
+        <TextView android:id="@+id/BariN" android:layout_width="200sp" android:gravity="left" android:layout_height="wrap_content" android:layout_weight="3" />
+        <TextView android:id="@+id/HH" android:layout_width="80dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:paddingLeft="50sp"/>
+        <TextView android:id="@+id/HHHead" android:layout_width="200sp" android:gravity="left"  android:layout_height="wrap_content" android:layout_weight="3" android:paddingLeft="30sp"/>
     </LinearLayout>
     <LinearLayout android:id="@+id/secRowVStatus" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
-        <TextView android:id="@+id/BBB" android:layout_width="50sp" android:gravity="left" android:layout_height="wrap_content" android:layout_marginTop="3sp" android:layout_marginBottom="3sp" />
-        <TextView android:id="@+id/lblVStatus" android:textSize="16sp" android:layout_width="wrap_content" android:textColor="#006699" android:gravity="left" android:layout_height="wrap_content" android:layout_marginTop="3sp" android:layout_marginBottom="3sp" />
+        <TextView android:id="@+id/lblVStatus" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:textSize="16sp" android:layout_width="wrap_content" android:textColor="#006699" android:gravity="left" android:layout_height="wrap_content" android:layout_marginTop="0sp" android:layout_marginBottom="5sp" />
     </LinearLayout>
  </LinearLayout>
