--- a/app/src/main/res/layout/member_list.xml
+++ b/app/src/main/res/layout/member_list.xml
@@ -59,22 +59,21 @@
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="5sp" android:background="#CCCCCC" />
     <LinearLayout android:id="@+id/secVill" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
 
-        <TextView android:id="@+id/VlblVill" android:text="খানা নম্বর" android:layout_width="100sp" android:layout_height="wrap_content" android:textSize="16sp" />
+        <TextView android:id="@+id/VlblVill" android:text="খানা নম্বর" android:layout_width="120sp" android:layout_height="wrap_content" android:textSize="25sp" />
 
         <EditText
             android:id="@+id/txtVill"
-            style="@style/customEdit"
-            android:layout_width="150sp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10sp"
             android:inputType="text"
             android:maxLength="11"
-            android:textSize="20sp" />
+            android:textSize="25sp" android:gravity="center_horizontal" />
         <EditText android:id="@+id/txtBari" android:maxLength="4" android:layout_width="60sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" android:visibility="gone" />
         <EditText android:id="@+id/txtHH" android:maxLength="2" android:layout_width="50sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="20sp" android:textSize="20sp" android:visibility="gone"/>
 
         <TextView
-            android:layout_width="147sp"
+            android:layout_width="130sp"
             android:layout_height="30dp"
             android:layout_column="0"
             android:text=""
