--- a/app/src/main/res/layout/household_list.xml
+++ b/app/src/main/res/layout/household_list.xml
@@ -3,7 +3,8 @@
 
     <LinearLayout android:layout_width="fill_parent" android:layout_height="45sp" android:orientation="horizontal" android:background="@color/pageHeadingBack">
         <ImageButton android:id="@+id/cmdBack" android:background="@color/pageHeadingBack" android:src="@drawable/back" android:layout_width="50sp" android:layout_height="match_parent" />
-        <TextView android:id="@+id/lblHeading" android:text="খানার তালিকা" android:paddingLeft="10sp" android:layout_width="450sp" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
+        <TextView android:id="@+id/lblHeading" android:text="খানার তালিকা" android:paddingLeft="10sp" android:layout_width="350sp" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
+        <TextView android:id="@+id/lblHHVisited" android:paddingLeft="10sp" android:layout_width="200sp" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
         <Button android:id="@+id/cmdGPS" android:background="@drawable/button_style"
             android:layout_width="85sp"  android:textSize="14sp" android:visibility="gone"
             android:layout_height="30sp" android:layout_gravity="center_vertical"
